# nu2flows

./: .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.gitlab/: .ci-build.yaml  .ci-pre-commit.yaml
configs/: export.yaml  train.yaml
configs/callbacks/: default.yaml
configs/datamodule/: default.yaml  geant4.yaml
configs/experiment/: train_geant4.yaml
configs/hydra/: default.yaml
configs/loggers/: default.yaml
configs/model/: deepset.yaml  default.yaml  feedforward.yaml  nudiffusion.yaml  nuflow.yaml  transformer.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
docker/: Dockerfile  base.Dockerfile
gridtools/: submit_train.py
models/example/: full_config.yaml
models/example_model/: full_config.yaml
notebooks/: check_root.py  plot_distributions.py  plot_geant4.py  test_rms.py  test_rope.py
onnx/: final_even.txt
scripts/: convert.py  convert_root.py  export.py  export_onnx.py  plot.py  to_onnx.py  train.py
slurm/: sl_convert.py  submit_train.py
src/: utils.py
src/datamodules/: dilepton.py  geant4.py  physics.py
src/models/: feedforward.py  layers.py  nudiffusion.py  nuflows.py
utils/: bayesian.py  hydra_utils.py  modules.py  optimisers.py  plotting.py  schedulers.py  torch_utils.py  transformers.py  utils.py
utils/flows/: transforms.py
