[project]
name = "nu2flows"
version = "0.5"
description = "Testbed for SSL training for jets"
license = {text = "MIT"}
requires-python = ">=3.10,<3.12"
dynamic = ["dependencies"]
authors = [
    {name = "Matthew Leigh", email = "matthew.leigh@unige.ch"}
]

[project.urls]
"Homepage" = "https://gitlab.cern.ch/mleigh/nu2flows/"
"Issue Tracker" = "https://gitlab.cern.ch/mleigh/nu2flows/-/issues"

[tool.setuptools]
packages = ["nu2flows"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 100
preview = true
target-version = "py311"
lint.select = ["ALL", "D212", "D417"]
lint.ignore = [
    "COM", "D100", "D101", "D102", "D103", "D104", "D105", "D205", "D401", "EM","FIX",
    "FBT","S101", "S404", "S602", "PLR2004", "PLR0912", "PLR0913", "PLR0914", "PLR0915",
    "PLR0917","PLC0415", "G004", "PD901", "N802", "C901", "DTZ005", "DTZ007",
    "INP", "EXE002", "TD002", "ANN001", "ANN002", "ANN003", "ANN101", "ANN201",
    "ANN202", "ANN204", "CPY001", "TRY003", "PLR1702", "N803", "N806", "N812", "T201",
    "PLW1514", "PTH123", "RUF015", "RUF017", "PLR6301","ERA", "ISC001", "ANN401",
    "PLR0911", "BLE001", "PD011", "ARG001", "ARG002", "S311", "E402", "SLF001", "S102",
    "TRY002", "PLR0904", "PGH004", "TD003", "B905"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["."]
